Added javadoc comments to all functions and classes. Woah..
Took 1 hour 50 minutes